@@ -14,10 +14,10 @@ TIFF Software
 <B>Home Page</B>: <A HREF="http://www.libtiff.org/">
   http://www.libtiff.org</A> <BR>
 <B>FAQ Page</B>: <I>forthcoming</I><BR>
-<B>Latest Release</B>: <A HREF="v3.5.2.html">v3.5.2</A><BR>
-<B>Latest Software</B>: <A HREF="v3.5.2.html">v3.5.2</A><BR>
+<B>Latest Release</B>: <A HREF="v3.5.3.html">v3.5.3</A><BR>
+<B>Latest Software</B>: <A HREF="v3.5.3.html">v3.5.3</A><BR>
 <B>Master FTP Site</B>: <A HREF="ftp://ftp.onshore.com/pub/libtiff">ftp.onshore.com</A> , directory pub/libtiff (Active mode FTP only!)<BR>
-<B>HTTP Download</B>: <A HREF=http://www.libtiff.org/tiff-v3.5.2.tar.gz>http://www.libtiff.org/tiff-v3.5.2.tar.gz</a><BR>
+<B>HTTP Download</B>: <A HREF=http://www.libtiff.org/tiff-v3.5.3.tar.gz>http://www.libtiff.org/tiff-v3.5.3.tar.gz</a>,  <A HREF=http://www.libtiff.org/tiff-v3.5.3.zip>http://www.libtiff.org/tiff-v3.5.3.zip</a><BR> 
 <B>Mailing List</B>: <a href=mailto:tiff@olympiakos.com>tiff@olympiakos.com</a> <BR>
 <B>Mailing List Subscription</b>: <a href=mailto:tiff-request@olympiakos.com>tiff-request@olympiakos.com</a> ("subscribe tiff" in body of message). <BR>
 <B>Mailing List Archive</b>: <A HREF= http://www.remotesensing.org/lists/libtiff_archive/maillist.html>http://www.remotesensing.org/lists/libtiff_archive/maillist.html</A>  <BR>
